--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,18 +1,19 @@
-.container2 {
+.main-container {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  width: 100vw;
+  width: 100vw; 
   overflow: hidden;
+  box-sizing: border-box;
 }
 
-.header2 {
-  height: 6rem;
+.main-header {
+  min-height: 6rem;
   background-color: #b5fae1;
   flex-shrink: 0;
   display: flex;
   align-items: center;
-  text-align: center;
+  justify-content: center;
   box-shadow: 0 4px 6px rgba(88, 135, 117, 0.5);
-  z-index: 14;
+  z-index: 10;
 }
