--- a/app/src/App.css
+++ b/app/src/App.css
@@ -3,12 +3,12 @@
   flex-direction: column;
   height: 100vh;
   width: 100vw; 
-  overflow: hidden;
   box-sizing: border-box;
 }
 
 .main-header {
-  min-height: 6rem;
+  min-height: 5rem;
+  max-height: 7%;
   background-color: #b5fae1;
   flex-shrink: 0;
   display: flex;
