--- a/app/src/routes/CharacterInfo/CharacterInfo.css
+++ b/app/src/routes/CharacterInfo/CharacterInfo.css
@@ -6,18 +6,17 @@
 }
 
 .main-content {
-  flex-grow: 1;
   display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #4eb89f;
-  min-width: 600px;
+  min-height: 60vh;
+  padding: 1rem;
 }
 
 .contentInfo {
-  margin: 1rem;
-  flex-grow: 1;
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
   padding: 4rem;
   background-color: #e5fff5;
   border-radius: 10px;
@@ -26,6 +25,10 @@
     1px 0 6px rgba(58, 142, 124, 0.5);
   z-index: 10;
   min-width: 600px;
+  max-width: 1000px;
+  width: 100%;
+  height: 100%;
+  max-height: 600px;
 }
 
 .leftColumn {
