--- a/app/src/routes/CharactersList/CharactersList.css
+++ b/app/src/routes/CharactersList/CharactersList.css
@@ -2,9 +2,11 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  height: 100%;
 }
 
 .main-content {
+  max-height: 100vh;
   flex-grow: 1;
   display: flex;
   background-color: #9aeacb;
@@ -14,12 +16,15 @@
   flex-grow: 1;
   width: 100%;
   padding: 0.5rem;
+  min-height: 70%;
+  align-items: start;
+  justify-content: space-between;
   background-color: #4eb89f;
   box-shadow: 
     -1px 0 6px rgba(58, 142, 124, 0.5),
     1px 0 6px rgba(58, 142, 124, 0.5);
   border-radius: 8px;
-  z-index: 10;
+  z-index: 7;
 }
 
 .sidebar {
@@ -28,25 +33,29 @@
   display: flex;
   align-items: center; 
   justify-content: center;
-  z-index: 9;
+  z-index: 6;
 }
 
 .nav {
-  height: 4rem;
+  min-height: 10%;
+  max-height: 30%;
   background-color: #4eb89f;
   display: flex;
+  align-items: end;
   justify-content: end;
-  padding: 0.5rem 3.1%;
-  z-index: 11;
+  padding-right: 4%;
+  padding-bottom: 0.5rem;
+  z-index: 9;
 }
 
 .footer {
-  height: 3.5rem;
+  min-height: 3.5rem;
+  max-height: 5%;
   background-color: #75c9b7;
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 11;
+  z-index: 10;
   box-shadow: 
   0  1px 6px rgba(58, 142, 124, 0.5);
 }
