--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,19 +1,29 @@
 .main-container {
+  width: 100vw; 
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  width: 100vw; 
   box-sizing: border-box;
 }
 
 .main-header {
+  width: 100%;
   min-height: 5rem;
-  max-height: 7%;
+  height: auto;
   background-color: #b5fae1;
-  flex-shrink: 0;
   display: flex;
+  flex-shrink: 0;
   align-items: center;
-  justify-content: center;
   box-shadow: 0 4px 6px rgba(88, 135, 117, 0.5);
   z-index: 10;
+}
+
+.main-content {
+  flex-grow: 1;
+  width: 100%;
+  background-color: #ffffff;
+  display: flex;
+  padding: 0rem;
+  align-items: center;
+  justify-content: center;
 }
