--- a/app/src/routes/CharactersList/CharactersList.css
+++ b/app/src/routes/CharactersList/CharactersList.css
@@ -1,22 +1,51 @@
 .characters-container {
   display: flex;
+  background-color: #4eb89f;
+  height: 100%;
+  width: 100%;
   flex-direction: column;
   flex-grow: 1;
-  height: 100%;
+  overflow: hidden;
 }
 
-.main-content {
-  max-height: 100vh;
+.filter {
+  height: auto;
+  display: flex;
+  align-items: end;
+  justify-content: end;
+  padding-right: 3%;
+  padding-bottom: 0.5rem;
+  padding-top: 0.5rem;
+  z-index: 9;
+}
+
+.characters-content{
+  height: 100%;
+  width: 100%;
   flex-grow: 1;
   display: flex;
-  background-color: #9aeacb;
+  align-items: center;
+  justify-content: center;
+  overflow: auto;
+  z-index: 8;
 }
 
-.content {
+.sidebar {
+  width: auto;
+  height: 100%;
+  background-color: #4eb89f;
+  display: flex;
+  align-items: center; 
+  justify-content: center;
+  z-index: 7;
+}
+
+.cards-content {
   flex-grow: 1;
-  width: 100%;
-  padding: 0.5rem;
-  min-height: 70%;
+  width: auto;
+  min-height: 50vh;
+  height: auto;
+  padding: 0.6rem;
   align-items: start;
   justify-content: space-between;
   background-color: #4eb89f;
@@ -24,38 +53,19 @@
     -1px 0 6px rgba(58, 142, 124, 0.5),
     1px 0 6px rgba(58, 142, 124, 0.5);
   border-radius: 8px;
-  z-index: 7;
-}
-
-.sidebar {
-  width: 3%;
-  background-color: #4eb89f;
-  display: flex;
-  align-items: center; 
-  justify-content: center;
-  z-index: 6;
-}
-
-.nav {
-  min-height: 10%;
-  max-height: 30%;
-  background-color: #4eb89f;
-  display: flex;
-  align-items: end;
-  justify-content: end;
-  padding-right: 4%;
-  padding-bottom: 0.5rem;
-  z-index: 9;
+  z-index: 8;
 }
 
 .footer {
+  width: 100%;
   min-height: 3.5rem;
-  max-height: 5%;
+  height: auto;
   background-color: #75c9b7;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: start;
+  padding: 0.5rem;
   z-index: 10;
   box-shadow: 
-  0  1px 6px rgba(58, 142, 124, 0.5);
+    0  1px 6px rgba(38, 94, 82, 0.5);
 }
