--- a/app/src/routes/CharactersList/CharactersList.css
+++ b/app/src/routes/CharactersList/CharactersList.css
@@ -13,6 +13,7 @@
   display: flex;
   align-items: end;
   justify-content: end;
+  flex-wrap: wrap;
   padding-right: 3%;
   padding-bottom: 0.5rem;
   padding-top: 0.5rem;
