--- a/app/src/routes/CharacterInfo/CharacterInfo.css
+++ b/app/src/routes/CharacterInfo/CharacterInfo.css
@@ -1,50 +1,55 @@
 .info-container {
   display: flex;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   flex-direction: column;
   flex-grow: 1;
+  box-sizing: border-box;
+  overflow: auto;
 }
 
 .info-content {
+  height: 100%;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #4eb89f;
-  min-height: 60vh;
-  padding: 1rem;
+  overflow: auto;
+  flex-wrap: wrap;
 }
 
-.contentInfo {
+.info-card {
+  width: auto;
+  height: auto;
+  padding: 5% 5%;
   display: flex;
   justify-content: space-between;
-  padding: 4rem;
   background-color: #e5fff5;
   border-radius: 10px;
   box-shadow:
     -1px 0 6px rgba(58, 142, 124, 0.5),
     1px 0 6px rgba(58, 142, 124, 0.5);
+  overflow: auto;
   z-index: 10;
-  min-width: 600px;
-  max-width: 1000px;
-  width: 100%;
-  height: 100%;
-  max-height: 600px;
 }
 
 .leftColumn {
   flex: 1;
   display: flex;
   justify-content: center;
-  min-width: 300px;
+  width: 50%;
+  height: 100%;
 }
 
 .rightColumn {
   flex: 1;
   display: flex;
+  align-items: end;
   justify-content: flex-end;
-  padding-top: 1rem;
-  padding-right: 2rem;
-  min-width: 300px;
+  flex-direction: column;
+  width: 50%;
+  height: 100%;
 }
 
 .image-container {
@@ -52,19 +57,20 @@
   flex-direction: column;
   align-items: end;
   gap: 1rem;
-  width : 100%;
+  width : auto
 }
 
 .image-container img {
-  border: 3px solid #4682B4;
+  border: 2px solid #4682B4;
   border-radius: 5px;
 }
 
-.sidebarInfo {
-  width: 20%;
-  background-color: #4eb89f;
+.episodes-container {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 9;
+  flex-direction: column;
+  justify-content: start;
+  align-items: end;
+  width : 120px;
+  height: 210px;
+  padding-top: 5%;
 }
